# kalam

./: .gitignore  CMakeLists.txt  readme.md
cmake/: kalam.cmake.in
examples/: example_usage.cpp
include/: image.h  kalam.h  load.h  save.h  utils.h
src/: image.cpp  kalam.cpp  load.cpp  save.cpp  utils.cpp
tests/: CMakeLists.txt  test_image.cpp
